<resources>
    <string name="app_name">ScalpCare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  fragment_home.xml  -->
    <string name="tvByungwon">근처 병원 찾기</string>
    <string name="tvByungwonInfo">우리동네 근처 탈모관련 병원들을 \n 한번 찾아보러 가자!</string>
    <string name="btnByungwon">근처 병원 찾기</string>
    <string name="tvDoopiSulmyung">현재 내 두피 상태가 궁금하니?</string>
    <string name="btnDoopiGumsa">두피검사 바로 가기</string>
    <string name="tvHairSulmyung">헤어스타일 검사하러 갈래?</string>
    <string name="btnHairGumsa">헤어스타일 검사하러 가기</string>
    <string name="tvTalmoSosik">꼭 알아야 할 탈모 소식</string>
    <string name="tvTopNews">인기 정보글</string>
    <string name="tvDuhbogi">더보기</string>
    <string name="tvMyGwanlee">최근 본인 기록</string>

    <!--  fragment_test.xml  -->
    <string name="tvDoopiTest"> 두피 AI Check! </string>
    <string name="tvDoopiInfo">두피 검사를 실시해서 \n 두피 상태를 확인해보자!</string>
    <string name="btnDoopiTest">검사하기</string>
    <string name="tvHairTest">헤어스타일 AI 추천</string>
    <string name="tvHairInfo">사진을 찍고 \n 헤어스타일을 추천 받으세요!</string>
    <string name="btnHairTest">검사하기</string>
    <string name="tvNotPro">이 검사는 의료 진단이 아닌 병원에서 \n 수집된 데이터를 기반으로 제작된 AI검사입니다. 상세한 검사는 \n 의료기관을 방문해 주세요.</string>

    <!--  fragment_care.xml  -->
    <string name="btnVsImg">두피 비교하기</string>
    <string name="tvDateFilter">날짜 필터</string>
    <string name="tvHintDateStart">0000-00-00</string>
    <string name="tvDateStart">시작 날짜</string>
    <string name="tvHintDateEnd">0000-00-00</string>
    <string name="tvDateEnd">종료 날짜</string>
    <string name="btnDateResult">검색</string>
    <string name="tvTitleCare">본인 기록</string>

    <!--  activity_board_write.xml  -->
    <string name="tvBack">뒤로가기</string>
    <string name="tvTitle">게시글 추가</string>
    <string name="tvTime">일자</string>
    <string name="tvSangtae">탈모 상태</string>
    <string name="btnYangho">양호</string>
    <string name="btnGyungjung">경증</string>
    <string name="btnJoongdungdo">중등도</string>
    <string name="btnJoongjung">중증</string>
    <string name="tvContent">내용</string>
    <string name="hintContent">내용을 입력하세요.</string>
    <string name="btnAdd">저장하기</string>

    <!--  fragment_more_setting.xml  -->
    <string name="tvNim">님</string>
    <string name="btntoGwanlee">본인 기록</string>
    <string name="btntoGumsa">AI 검사</string>
    <string name="btnLogout">로그아웃</string>
    <string name="btn">회원탈퇴</string>
    <string name="btnsulmoon">탈모 설문조사</string>
    <string name="btnTeam">팀원 소개</string>
    <string name="btntaltwe">회원탈퇴</string>

    <!--  activity_info_inside.xml  -->
    <string name="edtHintDetgul">댓글을 입력하세요.</string>
    <string name="btndetgul">등록</string>

    <!--  activity_info_inside.xml  -->
    <string name="btnReWrite">수정</string>
    <string name="btnDelBoard">삭제</string>
    <string name="btnAcceptBoard">확인</string>

    <!--  activity_team_sogae.xml  -->
    <string name="tvLeader">오장렬</string>
    <string name="tvTeamjang">팀장</string>
    <string name="tvTeamwon">팀원</string>
    <string name="tvTeam1">이동우</string>
    <string name="tvTeam2">김주영</string>
    <string name="tvTeam3">박조시아</string>

    <!--  activity_test_result.xml  -->
    <string name="tvTestResult">검사 결과</string>
    <string name="tvDateResult">일자:</string>
    <string name="tvSangtaeResult">상태</string>
    <string name="tvSangtaeResultInfo">(양호/경증/중등도/중증)</string>
    <string name="tvMisae">미세각질상태:</string>
    <string name="tvPG">피지과다:</string>
    <string name="tvSyee">모낭사이홍반:</string>
    <string name="tvNongpo">모낭홍반농포:</string>
    <string name="tvBDum">비듬:</string>
    <string name="tvTalmo">탈모:</string>
    <string name="tvSangtaeClick">두피 텍스트들을 누르면 해당 두피에 대한 원인 및 증상을 볼 수 있습니다.</string>
    <string name="btnTestResultDone">확인 완료</string>
    <string name="btnTestGoBoardWrite">게시글 작성</string>

    <!--  두피 상태 상세정보 페이지들  -->
    <string name="tvMisaeGak">미세각질상태</string>
    <string name="tvMisaeWonin">두피 피지선의 과다 분비, 호르몬의 불균형, 두피 세포의 과다 증식 등이 있습니다. \n 말라쎄지아라는 진균류가 방출하는 분비물이 표피층을 자극하여 비듬이 발생하기도 합니다.\n 이외에 스트레스, 과도한 다이어트 등이 비듬 발생의 원인이 된다는 연구 결과도 있습니다.</string>
    <string name="tvMisaeJungsang">두피가 건조해지면 하얗게 일어나 각질층이 떨어져 나오는 비듬이 심해진다. \n 또한 심하게 가렵고 하얗거나 노란 각질이 생겨난다. \n 두피 건조가 지속될 경우 두피가 울긋불긋 붉어지거나, 자꾸 긁어 상처에 진물, 딱지, 뾰루지 등이 생길 수 있다.</string>
    <string name="tvPgee">피지과다</string>
    <string name="tvPgeeWonin">피지 과다 분비를 촉진하거나 악화시킬 수 있는 다양한 원인이 있습니다. \n 유전적 요인: 피지선의 과다한 활동. \n 피지선은 실제로 안드로겐에 의존하는 기관입니다. \n 즉 안드로겐(또는 남성 호르몬)이 피지선의 주요 자극임을 의미합니다.</string>
    <string name="tvPgeeJungsang">두피가 전체적으로 붉어지며 피지선이 잘 발달하고 피지가 많은 부위에 발병하는데, \n 피지가 비정상적으로 많이 올라와 번들거리면서도 건조함이 심하게 느껴진다. \n 초기 대응하지 못하면 두피 가려움이나 각질, \n 염증 등은 두피 모공이 숨을 쉬지 못하게 되면서 탈모로도 이어질 확률이 크다.</string>
    <string name="tvSiee">모낭사이홍반</string>
    <string name="tvSieeWonin">모낭염은 스트레스나, 과로, 수면 부족 등에 의해 면역력이 약해진 피부 속으로 균이 침투해 발생합니다. \n 예를 들어 콧속의 털을 뽑거나 겨드랑이 털을 면도하거나 타르나 석유 혹은 파라핀이 모공 속으로 들어갔을 때 발생합니다. \n 원인균은 대체로 독성이 약한 표피 포도상구균일 때가 많으나, 황색 포도상구균인 경우도 있습니다.</string>
    <string name="tvSieeJungsang">모낭염의 증상은 원인과 부위에 따라 다르게 나타납니다. \n 보통 두피나 팔다리같이 전신 증상이 없고 털이 있는 곳에 발생하지만, 어느 부위에서나 발생할 수 있습니다. 균이 침입한 부위는 가렵고 통증이 느껴지며, 좁쌀같이 노랗게 곪은 형태가 나타납니다.모낭을 중심으로 붉은 반점이 생기면서 작은 구진이나 농포가 생기는 경우도 있습니다. \n 이때 발열이나 오한 등 전신 증상이 심하게 나타나서 국소 림프절이 붓거나 털을 중심으로 단단하고 통증이 심한 홍색 결절이 나타나기도 합니다. 가피가 형성되지만 적당히 치료하면 흉을 남기지 않고 치료됩니다. 균이 피부의 표피에만 머물지 않고 더 깊숙이 침입한 경우에는 흉터가 생기거나 탈모가 생기기도 합니다.</string>
    <string name="tvNongpoo">모낭홍반농포</string>
    <string name="tvNongpooWonin">모낭염은 스트레스나, 과로, 수면 부족 등에 의해 면역력이 약해진 피부 속으로 균이 침투해 발생합니다. \n 예를 들어 콧속의 털을 뽑거나 겨드랑이 털을 면도하거나 타르나 석유 혹은 파라핀이 모공 속으로 들어갔을 때 발생합니다. \n 원인균은 대체로 독성이 약한 표피 포도상구균일 때가 많으나, 황색 포도상구균인 경우도 있습니다.</string>
    <string name="tvNongpooJungsang"> 모낭염의 증상은 원인과 부위에 따라 다르게 나타납니다. \n 보통 두피나 팔다리같이 전신 증상이 없고 털이 있는 곳에 발생하지만, 어느 부위에서나 발생할 수 있습니다. 균이 침입한 부위는 가렵고 통증이 느껴지며, 좁쌀같이 노랗게 곪은 형태가 나타납니다.모낭을 중심으로 붉은 반점이 생기면서 작은 구진이나 농포가 생기는 경우도 있습니다. \n 이때 발열이나 오한 등 전신 증상이 심하게 나타나서 국소 림프절이 붓거나 털을 중심으로 단단하고 통증이 심한 홍색 결절이 나타나기도 합니다. 가피가 형성되지만 적당히 치료하면 흉을 남기지 않고 치료됩니다. 균이 피부의 표피에만 머물지 않고 더 깊숙이 침입한 경우에는 흉터가 생기거나 탈모가 생기기도 합니다.</string>
    <string name="tvBDumm">비듬</string>
    <string name="tvBDummWonin">비듬이 생기는 원인은 여러 가지입니다. \n 두피 피지선의 과다 분비, 호르몬의 불균형, 두피 세포의 과다 증식 등이 있습니다. \n 말라쎄지아라는 진균류가 방출하는 분비물이 표피층을 자극하여 비듬이 발생하기도 합니다. \n 이외에 스트레스, 과도한 다이어트 등이 비듬 발생의 원인이 된다는 연구 결과도 있습니다.</string>
    <string name="tvBDummJungsang"> 두피에 국한된 대표적인 동반 증상은 가려움증입니다. \n 증상이 심해지면 뺨, 코, 이마에 각질을 동반한 구진성 발진이 나타나거나, 바깥귀길의 심한 가려움증을 동반한 비늘이 발생하는 등 지루성 피부염의 증상이 발생합니다.</string>
    <string name="tvTalmoo">탈모</string>
    <string name="tvTalmooWonin">탈모는 과도한 고기 위주의 식습관 혹은 지방질 위주의 식습관과 잦은 음주, 흡연, \n 심한 다이어트나 편식 등은 모근과 모발에 충분한 영양 공급을 방해하기 때문에 탈모가 일어날 수 있습니다.</string>
    <string name="tvTalmooJungsang">이마가 점점 넓어지는 느낌이 든다. \n 가늘고 힘없는 머리가 많이 빠진다. \n 머리카락이 하루에 100개 이상 빠진다. \n 비듬이 많아지거나 두피가 가렵다. \n 모발이 가늘고 부드러워졌다. \n 두피를 눌러보면 가벼운 통증이 느껴진다. \n 앞쪽과 뒤쪽 머리카락의 굵기 차이가 크다.</string>
    <string name="tvWonin">원인</string>
    <string name="tvJungsang">증상</string>


</resources>