<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".care.BoardInsideActivity">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/tvTestResult"
        android:textColor="@color/green"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="330dp"
        android:layout_height="475dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/corner_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/imgContent"
        android:layout_width="275dp"
        android:layout_height="198dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tvDateResult"
        app:layout_constraintEnd_toEndOf="@+id/imgContent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="@+id/imgContent"
        app:layout_constraintTop_toBottomOf="@+id/imgContent" />

    <TextView
        android:id="@+id/tvInsideTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/lightgreen"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/imgContent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tvSangtaeResult"
        android:textColor="@color/lightgreen"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/tvInsideContent"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/tvSangtaeResultInfo"
        android:textColor="@color/lightgreen"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="@+id/imgContent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/textView17"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnTestDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/btnTestResultDone"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvMisae"
        app:layout_constraintEnd_toEndOf="@+id/tvInsideContent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvPG"
        app:layout_constraintEnd_toEndOf="@+id/textView50"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView50"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvSyee"
        app:layout_constraintEnd_toEndOf="@+id/textView64"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView64"
        app:layout_constraintTop_toBottomOf="@+id/textView64" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvNongpo"
        app:layout_constraintEnd_toEndOf="@+id/textView65"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView65"
        app:layout_constraintTop_toBottomOf="@+id/textView65" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvBDum"
        app:layout_constraintEnd_toEndOf="@+id/textView71"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView71"
        app:layout_constraintTop_toBottomOf="@+id/textView71" />

    <TextView
        android:id="@+id/textView73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvTalmo"
        app:layout_constraintEnd_toEndOf="@+id/textView72"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView72"
        app:layout_constraintTop_toBottomOf="@+id/textView72" />

    <TextView
        android:id="@+id/textView74"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/lightgreen"
        app:layout_constraintBottom_toBottomOf="@+id/textView50"
        app:layout_constraintEnd_toEndOf="@+id/tvInsideContent"
        app:layout_constraintStart_toEndOf="@+id/textView50"
        app:layout_constraintTop_toTopOf="@+id/textView50"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView75"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/lightgreen"
        app:layout_constraintBottom_toBottomOf="@+id/textView64"
        app:layout_constraintEnd_toEndOf="@+id/textView74"
        app:layout_constraintStart_toStartOf="@+id/textView74"
        app:layout_constraintTop_toTopOf="@+id/textView64"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/lightgreen"
        app:layout_constraintBottom_toBottomOf="@+id/textView65"
        app:layout_constraintEnd_toEndOf="@+id/textView75"
        app:layout_constraintStart_toStartOf="@+id/textView75"
        app:layout_constraintTop_toTopOf="@+id/textView65"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/lightgreen"
        app:layout_constraintBottom_toBottomOf="@+id/textView71"
        app:layout_constraintEnd_toEndOf="@+id/textView76"
        app:layout_constraintStart_toStartOf="@+id/textView76"
        app:layout_constraintTop_toTopOf="@+id/textView71"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/lightgreen"
        app:layout_constraintBottom_toBottomOf="@+id/textView72"
        app:layout_constraintEnd_toEndOf="@+id/textView77"
        app:layout_constraintStart_toStartOf="@+id/textView77"
        app:layout_constraintTop_toTopOf="@+id/textView72"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/lightgreen"
        app:layout_constraintBottom_toBottomOf="@+id/textView73"
        app:layout_constraintEnd_toEndOf="@+id/textView78"
        app:layout_constraintStart_toStartOf="@+id/textView78"
        app:layout_constraintTop_toTopOf="@+id/textView73"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>