<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".care.BoardWriteActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tvTitle"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imgBack"
                    app:layout_constraintTop_toBottomOf="@+id/tvBack" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/tvTime"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.144"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvContent"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="56dp"
                    tools:layout_editor_absoluteY="244dp" />

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvSangtae"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="57dp"
                    tools:layout_editor_absoluteY="198dp" />

                <TextView
                    android:id="@+id/tvBoardTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="156dp"
                    android:text="2023.00.00 00:00"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="330dp"
                    android:layout_height="0.1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/grayText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="330dp"
                    android:layout_height="0.1dp"
                    android:background="@color/grayText"
                    tools:layout_editor_absoluteX="39dp"
                    tools:layout_editor_absoluteY="336dp" />

                <EditText
                    android:id="@+id/edtTvContent"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:background="@drawable/corner_round"
                    android:ems="10"
                    android:gravity="top|left"
                    android:hint="@string/hintContent"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="39dp"
                    tools:layout_editor_absoluteY="277dp" />

                <TextView
                    android:id="@+id/editTextText2"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:background="@drawable/corner_round"
                    android:ems="10"
                    android:gravity="top|left"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="39dp"
                    tools:layout_editor_absoluteY="361dp" />

                <ImageView
                    android:id="@+id/imgContent"
                    android:layout_width="300dp"
                    android:layout_height="230dp"
                    app:srcCompat="@drawable/black_plus"
                    tools:layout_editor_absoluteX="54dp"
                    tools:layout_editor_absoluteY="369dp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/lightgreen"
                    android:text="@string/btnAdd"
                    tools:layout_editor_absoluteX="104dp"
                    tools:layout_editor_absoluteY="613dp" />

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="36dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/arrow_left" />

                <TextView
                    android:id="@+id/tvBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvBack"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imgBack"
                    app:layout_constraintStart_toEndOf="@+id/imgBack"
                    app:layout_constraintTop_toTopOf="@+id/imgBack" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>